routes to create and get hardwares
