# docs/swagger_output.json
@@ -271,6 +271,15 @@
           "Personnel"
         ],
         "description": "Create a new personnel (requires role : \"admin\" )",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Personnel created successfully",
@@ -286,6 +295,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "409": {
             "description": "sid already exists",
@@ -353,8 +368,15 @@
         "tags": [
           "Personnel"
         ],
-        "description": "Get all personnel with pagination",
+        "description": "Get all personnel with pagination (requires role : \"admin\" )",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "page",
             "in": "query",
@@ -389,6 +411,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "422": {
             "description": "Validation error",
@@ -433,7 +461,7 @@
         "tags": [
           "Personnel"
         ],
-        "description": "Endpoint to get the csv template for bulk personnel creation",
+        "description": "Endpoint to get the csv template for bulk personnel creation (requires role : \"admin\" )",
         "parameters": [
           {
             "name": "authorization",
@@ -446,6 +474,9 @@
         "responses": {
           "401": {
             "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
@@ -461,6 +492,15 @@
           "Personnel"
         ],
         "description": "Endpoint to create multiple personnel records from a csv file (requires role : \"admin\") sample_file: https://docs.google.com/spreadsheets/d/1nREThXMnFuE5Rgo3XyY9hG5FYOPHe1J2o5NpZEsR26E/edit?usp=sharing",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Personnel bulk created successfully",
@@ -476,6 +516,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal server error",
@@ -524,8 +570,15 @@
         "tags": [
           "Personnel"
         ],
-        "description": "Search personnel by sid or name",
+        "description": "Search personnel by sid or name (requires role : \"admin\" )",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "q",
             "in": "query",
@@ -570,6 +623,12 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "422": {
             "description": "Validation error",
             "content": {
@@ -613,7 +672,7 @@
         "tags": [
           "Personnel"
         ],
-        "description": "Get personnel by sid",
+        "description": "Get personnel by sid (requires role : \"admin\" )",
         "parameters": [
           {
             "name": "sid",
@@ -623,6 +682,13 @@
               "type": "string"
             },
             "description": "SID of personnel"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -640,6 +706,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Personnel not found response",
@@ -707,6 +779,13 @@
               "type": "string"
             },
             "description": "SID of personnel"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -724,6 +803,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Personnel not found response",
@@ -791,6 +876,13 @@
               "type": "string"
             },
             "description": "SID of personnel"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -808,6 +900,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Personnel not found response",
@@ -878,6 +976,15 @@
           "Personnel"
         ],
         "description": "Delete multiple personnel by sid. (requires role : \"admin\" )",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Personnel deleted in bulk response",
@@ -893,6 +1000,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Personnel not found response",
@@ -955,6 +1068,223 @@
             }
           }
         }
+      }
+    },
+    "/api/v1/admin/hardware/register": {
+      "post": {
+        "tags": [
+          "Admin-Hardware"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Hardware registered successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Hardware created successfully response"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Hardware created successfully response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "409": {
+            "description": "hardware_id already exists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Hardware_id already exists response"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Hardware_id already exists response"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Validation error"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Validation error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Internal server error"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Internal server error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/create hardware req.body"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/admin/hardware/": {
+      "get": {
+        "tags": [
+          "Admin-Hardware"
+        ],
+        "description": "Endpoint to fetch all Hardware",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "page number",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "limit per page",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Hardware fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Hardware fetched successfully response"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Hardware fetched successfully response"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Validation error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Validation error"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Validation error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Internal server error"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Internal server error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
@@ -2094,6 +2424,192 @@
         },
         "xml": {
           "name": "Personnel updated successfully response"
+        }
+      },
+      "create hardware req.body": {
+        "type": "object",
+        "properties": {
+          "hardware_id": {
+            "type": "string",
+            "example": "1"
+          },
+          "secret": {
+            "type": "string",
+            "example": "123456789"
+          },
+          "name": {
+            "type": "string",
+            "example": "uhf rfid unit 1"
+          },
+          "description": {
+            "type": "string",
+            "example": "uhf rfid unit 1"
+          },
+          "type": {
+            "type": "string",
+            "example": "uhf rfid"
+          },
+          "status": {
+            "type": "string",
+            "example": "idle"
+          }
+        },
+        "xml": {
+          "name": "create hardware req.body"
+        }
+      },
+      "Hardware created successfully response": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "example": true
+          },
+          "status": {
+            "type": "number",
+            "example": 200
+          },
+          "message": {
+            "type": "string",
+            "example": "Hardware registered successfully"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "hardware_id": {
+                "type": "string",
+                "example": "2"
+              },
+              "secret": {
+                "type": "string",
+                "example": "123456789"
+              },
+              "name": {
+                "type": "string",
+                "example": "uhf rfid unit 1"
+              },
+              "description": {
+                "type": "string",
+                "example": "uhf rfid unit 1"
+              },
+              "type": {
+                "type": "string",
+                "example": "uhf rfid"
+              },
+              "status": {
+                "type": "string",
+                "example": "idle"
+              },
+              "_id": {
+                "type": "string",
+                "example": "64adad835080ec7a50ea369f"
+              },
+              "__v": {
+                "type": "number",
+                "example": 0
+              }
+            }
+          }
+        },
+        "xml": {
+          "name": "Hardware created successfully response"
+        }
+      },
+      "Hardware_id already exists response": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "example": false
+          },
+          "status": {
+            "type": "number",
+            "example": 409
+          },
+          "message": {
+            "type": "string",
+            "example": "Hardware id already exists"
+          },
+          "stack": {
+            "type": "string",
+            "example": ""
+          }
+        },
+        "xml": {
+          "name": "Hardware_id already exists response"
+        }
+      },
+      "Hardware fetched successfully response": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "example": true
+          },
+          "status": {
+            "type": "number",
+            "example": 200
+          },
+          "message": {
+            "type": "string",
+            "example": "Hardware fetched successfully"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "hardware": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "64ac934f0a1b0e81592ef533"
+                    },
+                    "hardware_id": {
+                      "type": "string",
+                      "example": "1"
+                    },
+                    "secret": {
+                      "type": "string",
+                      "example": "123456789"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "uhf rfid unit 1"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "uhf rfid unit 1"
+                    },
+                    "type": {
+                      "type": "string",
+                      "example": "uhf rfid"
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": "idle"
+                    },
+                    "__v": {
+                      "type": "number",
+                      "example": 0
+                    }
+                  }
+                }
+              },
+              "totalPages": {
+                "type": "number",
+                "example": 2
+              },
+              "currentPage": {
+                "type": "string",
+                "example": "1"
+              }
+            }
+          }
+        },
+        "xml": {
+          "name": "Hardware fetched successfully response"
         }
       }
     },
